src/App.css
/* ... */
#top-nav>* {
    border-bottom: solid var(--outer-border-size) var(--color-text);


}
 */

.rotate-icon {
    transform: rotate(360deg);
}





.section-header {
    grid-area: header;

    text-align: center;


    margin: 0;

    align-self: center;

}

.section-header h2 {

    padding: 0;

}



















.page-section {


    display: flex;
    flex-direction: column;

    justify-content: flex-start;
    gap: 2rem;

    min-height: 100vh;


    width: 100%;


}



/* .section-content {

    display: flex;
    flex-direction: column;

    align-items: center;
    position: relative;
    text-align: left;
    margin-inline: 0;


} */


.centered-page {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;

    margin-top: 3rem;
    min-height: 100vh;
    width: 100%;


}


#aboutme-page {

    position: relative;
    display: grid;

    margin-top: 10rem;

    gap: 4rem;
    grid-template-columns: 0.5fr 1fr 1fr 0.5fr;
    grid-template-rows: 1fr 2fr 5fr;
    grid-template-areas:
        /*  'navigation navigation navigation' */
        'interest-2 interest-1 interest-3 interest-4'
        'main-content main-content main-content main-content'
        'skills skills skills skills';

    width: 90%;
    height: 100%;



}

/* .nav img {
    width: 5rem;
    height: auto;
    filter: var(--svg-filter);


}

.nav img:hover {
    cursor: pointer;
}

.nav {
    
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 2rem;
    height: auto;
    width: 90%;
} */

.nav-bar {
    position: fixed;
    top: 2rem;
    right: 2rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 2rem;
    height: auto;


}

.nav-bar img {
    width: 2rem;
    height: auto;
    filter: var(--svg-filter);
}


#first-interest span,
#second-interest span,
#third-interest span,
#fourth-interest span {
    font-size: 2rem;
}

#first-interest,
#second-interest,
#third-interest,
#fourth-interest {
    position: relative;
    border: solid var(--outer-border-size) var(--color-text);
    display: flex;
    align-items: center;
    justify-content: center;
    color: var(--color-text);
    /*     background: radial-gradient(circle at center, var(--color-highlight-area-gradient), var(--color-highlight-area));
 */
    /*   background: linear-gradient(#DC143C, #FFA500); */


    /*   background: linear-gradient(var(--color-highlight-area), #FFB300); */

    background-color: var(--color-highlight-area);



    overflow: hidden;
    box-sizing: border-box;
    /*     filter: drop-shadow(calc(var(--outer-border-size)) calc(var(--outer-border-size)) 0px var(--color-accent));
 */
    /* Comic effect */
}

#first-interest::before,
#second-interest::before,
#third-interest::before,
#fourth-interest::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-image: url('src/assets/noise-background.jpg');
    opacity: 0.3;
    pointer-events: none;
    object-fit: cover;

    mix-blend-mode: overlay;
}




#first-interest {
    grid-area: interest-1;

    width: 100%;
    height: 100%;




}

#second-interest {

    grid-area: interest-2;
    width: 100%;
    height: 100%;

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    gap: 1rem;

    position: relative;


}




#third-interest {

    grid-area: interest-3;



    margin: 0;

    width: 100%;
    height: 100%;

}

#fourth-interest {
    grid-area: interest-4;



    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
}














.dot-background {
    position: absolute;
    top: -10px;
    bottom: -10px;
    right: -10px;
    left: -10px;
    /*  background-color: var(--color-accent); */
    background: radial-gradient(circle at center, var(--color-accent)30%, var(--color-accent-gradient)70%, var(--color-accent));


    mask-image: url("src/assets/background.svg");
    -webkit-mask-image: url("src/assets/background.svg");
    /* Ensure compatibility with WebKit browsers */
    mask-repeat: no-repeat;
    /* Prevent the mask from repeating */
    -webkit-mask-repeat: no-repeat;
    /* WebKit compatibility */
    background-repeat: no-repeat;
    /* Prevent the background from repeating */
    mask-size: cover;
    /* Scale the mask to cover the element */
    -webkit-mask-size: cover;
    /* WebKit compatibility */
    background-size: cover;
    /* Scale the background to cover the element */
    background-position: center;
    /* Center the background image */
    transform-origin: center;
    transform: scale(1.4);
    opacity: 0.8;
    z-index: -1;



}

#intro-section {
    border: solid var(--outer-border-size) var(--color-text);
    grid-area: main-content;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 1rem;
    background-color: var(--color-highlight-area);
    /*  background: radial-gradient(circle at center, var(--color-highlight-area-gradient), var(--color-highlight-area)); */

}




/* #bottom-home {
    overflow: hidden;
    display: flex;
    grid-area: skills;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    position: relative;
  
    height: 100%;



    z-index: 1;
  

}
 */


/* #bottom-home div, */
#skills-body {
    position: relative;
    grid-area: skills;
    height: 100%;
    border: solid var(--outer-border-size) var(--color-text);

    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    gap: 2rem;
    background-color: var(--color-highlight-area);
    overflow: hidden;
    z-index: 0;

}


.skill-item {
    display: flex;
    flex-direction: column;

    justify-content: center;

    filter: var(--svg-filter);
}
/* ... */

